[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/CardDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SceneScripts/DraftBooster.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/DeckDisplayX.tscn" type="PackedScene" id=6]

[node name="Draft" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoosterDisplay" parent="." instance=ExtResource( 1 )]
margin_left = 30.0
margin_top = 44.0
margin_right = 70.0
margin_bottom = 84.0
z_index = 2

[node name="CardDisplay" parent="." instance=ExtResource( 1 )]
margin_left = 30.0
margin_top = -148.0
margin_right = 70.0
margin_bottom = -108.0
viewMul = 0.6
z_index = 20

[node name="QuitButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 76.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="CenterControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsHolder" type="Node2D" parent="CenterControl"]
z_index = 99

[node name="SettingsPage" parent="CenterControl/SettingsHolder" instance=ExtResource( 5 )]
visible = false
margin_right = 430.0
margin_bottom = 353.0

[node name="DeckDisplayControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplay" parent="DeckDisplayControl" instance=ExtResource( 6 )]
position = Vector2( -120, 75 )

[node name="BoosterNum" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = 140.0
margin_right = 27.5
margin_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pack: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackNums" type="Control" parent="."]
margin_left = 16.0
margin_top = 192.0
margin_right = 160.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="PackNums"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[connection signal="pressed" from="QuitButton" to="." method="onQuitButtonPressed"]
[connection signal="pressed" from="SettingsButton" to="." method="onSettingsPressed"]
